style.css
:root {
  --yellow-color: #fdc913;
  --grey-light-color: #5f5f5f;
  --grety-dark-color: #292929;
  --red-color: #ce2829;
  --beige-color: #faf7f2;
  --white-color: #ffffff;
}

* {
  box-sizing: border-box;
  border: 1px solid purple;
}


body {
  background-color: var(--beige-color);
  margin: 0;
}
header {
  display: flex;
  justify-content: center;
  height: 100vh;
  background-image: url("./public/assets/iteration-1/home-banner.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.container {
  width: 100%;
  margin: 0 auto;
  max-width: 960px;
}

.header-container {

  margin: 0 0;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  gap: 1rem;
}
.logo {
  width: 30vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.header-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.header-content-text{
  color:var(--yellow-color);
  display: flex;
  justify-content: center;  
  font-family: "Satisfy",sans-serif;
}
.header-content-text2 {
  color: var(--white-color);
  display: flex;
  justify-content: flex-start;
  align-items: center;
  font-size: 7vh;
  font-family: "Roboto Condensed";
}
.btn1 {
  width: 96px;
  height: 31px;
  color: black;
  background-color: #FDC913;
  border-radius: 27px;
  border: none;
  margin: 2vh;
  font-size: x-small;
}
.btn1:hover {
  background-color: darkgoldenrod;
}

.svg-items {
  display: flex;
  justify-content: space-between;
  background-color: var(--white-color);
  padding: 1.2rem 0;
}
.svg-items a {
  position: relative;
  display: flex;
  align-items: center;
  text-decoration: none;
  color: var(--grety-dark-color);
  font-size: 15px;
}
.kartlar{
  display: flex;
  margin-top: 3rem;
  gap: 5px;
}
.kartlar-section {
  margin-top: 2rem;
}
.kart-sol {
  width: 100%;
  background-image: url("./public/assets/iteration-2/cta/kart-1.png");
  background-size: cover;
  background-position: center;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
}

.kart-sol .kart-content {
  width: 100%;
  padding: 15px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  gap: 1rem;
}
.sol-text {
  font-size: 50px;
  font-family: "Quattrocento",;
  color: var(--white-color);
}
.sol-text2 {
  font-family: "Barlow";
  color: var(--white-color);
  font-size: 14px;
}
.kart-sagust{
  background-image: url("./public/assets/iteration-2/cta/kart-2.png");
}
.kart-sagalt{
  background-image: url("./public/assets/iteration-2/cta/kart-3.png");
}

.kart-sag {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: auto;
  gap: 5px;
}
.kart-sag .kart-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  gap: 1rem;
}
.kart-sagust, .kart-sagalt {
  flex: 1; 
  background-size: cover;
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  border-radius: 10px;
  padding: 1rem;
}

.highlight{
  color: var(--red-color);
}
.btn2 {
  border-radius: 15px;
  color: var(--red-color);
  background-color: var(--white-color);
  border: var(--white-color);
  padding: 11px;
  width: 120px;
}
.kart-sagust .ust-text {
  font-family: "Barlow",sans-serif;
  color: var(--white-color);
  font-size: x-large;
}
.kart-sagalt .alt-text {
  font-family: "Barlow",sans-serif;
  color: var(--grety-dark-color);
  font-size: x-large;
}
.btn2:hover {
  background-color: var(--yellow-color);
}
.texts {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}
.text-section {
  margin-top: 2rem;
}
.texts p{
  margin: 0;
}
.txt1 {
  font-family: "Satisfy";
  color: var(--red-color); 
  font-size: 30px;
}
.txt2 {
  font-family: "barlow";
  font-weight: bold;
  font-size: xx-large;
}
.button-container {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-top: 2rem;
}
.btn3 {
  display: flex;
  align-items: center;
  border: none;
  border-radius: 50px;
  background-color: var(--white-color);
  gap: 1rem;
  padding: 0.5rem 1rem;
}
.btn3:nth-child(2) {
  background-color: var(--grety-dark-color);
  color: var(--white-color);
}
.food-container {
  display: flex;
  align-items: center;
  justify-content: space-around;
  margin-top: 20px;
}
.food-content {
  display: flex;
  margin: 35px 0 50px 0;
  background-color: var(--white-color);
  border-radius: 10px;
}
.food-frame img {
  padding: 0;
}
.food-text {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  font-family: "barlow";
}
.food-text1{
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.food-text1:nth-child(1){
  margin-left: 10rem;
}
.food-text1:nth-child(2){
  font-weight: bold;
}

.footer {
  background-color: var(--grety-dark-color);
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.top-container {
  display: flex;
  gap: 2rem;
  align-items: flex-end;
  margin-top: 30px;
}
.first-group {
  display: flex;
  flex-direction: column;
  color: var(--white-color);
  font-family: "Barlow";
}
.second-group {
  display: flex;
  flex-direction: column;
  font-family: "Barlow";
  color: var(--white-color);
}
.link-list a {
  list-style: none;
  text-decoration: none;
  color: var(--white-color);
  
  
}
h3 {
  margin-bottom: 10px;
}
.third-group {
  font-family: "barlow";
  color: var(--white-color);
  display: flex;
  flex-direction: column;
  
}
.image-gallery {
  display: grid;
  grid-template-columns: repeat(3,1fr);
  gap: 15px;
}
.bottom-container {
  color: var(--white-color);
}

@media (max-width: 992px) {
  
.container {
  max-width: 900px;
}
  
}

@media (max-width: 768px) {
.container{
  max-width: 720px;
}
}

@media (max-width: 576px){
.container{
  max-width: 540px;
}
}

